--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
+    "express": "^4.19.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
@@ -19,6 +19,7 @@
     "node-schedule": "^2.1.1",
     "rate-limiter-flexible": "^7.2.0",
     "socket.io": "^4.8.1",
+    "systeminformation": "^5.27.8",
     "uuid": "^11.1.0",
     "ws": "^8.18.3"
   },
